--- a/frontend-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/frontend-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -17,7 +17,10 @@
             <a href="#" class="primary-btn">Add to cart</a>
           </div>
         </div>
-      </div>
+        <!-- if product is empty -->
+      <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
+        No products found.
+    </div>
     </div>
   </div>
 </div>
