--- a/frontend-ecommerce/src/app/components/product-list/product-list-grid.component.html
+++ b/frontend-ecommerce/src/app/components/product-list/product-list-grid.component.html
@@ -6,16 +6,12 @@
         <div *ngFor="let tempProduct of products" class="col-md-3">
           <div class="product-box">
             <a routerLink="/products/{{ tempProduct.id }}">
-              <img
-              src="{{ tempProduct.imageUrl }}"
-              alt="product"
-              class="img-responsive"
-            />
+              <img src="{{ tempProduct.imageUrl }}" alt="product" class="img-responsive" />
             </a>
             <a routerLink="/products/{{ tempProduct.id }}">
               <h1>{{ tempProduct.name }}</h1>
             </a>
-            
+
             <div class="price">
               {{ tempProduct.unitPrice | currency : "USD" }}
             </div>
@@ -23,9 +19,44 @@
           </div>
         </div>
         <!-- if product is empty -->
-      <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
-        No products found.
-    </div>
+        <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
+          No products found.
+        </div>
+
+        <div class="footer-pagination">
+          <div class="row">
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
+              <div class="row">
+                <div class="col-md-9" style="padding-left: 30%">
+                  <ngb-pagination [(page)]="thePageNumber" [pageSize]="thePageSize" [collectionSize]="theTotalElements"
+                    (pageChange)="(listProducts())">
+                  </ngb-pagination>
+                </div>
+
+                <div class="col-md-3 mt-2" style="text-align: right">
+                  <span class="mr-2">Page Size</span>
+                  <select #myPageSelect (change)="updatePageSize(myPageSelect.value)">
+                    <option selected="true">
+                      5
+                    </option>
+                    <option>
+                      10
+                    </option>
+                    <option>
+                      20
+                    </option>
+                    <option>
+                      50
+                    </option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
     </div>
   </div>
-</div>
