--- a/frontend-ecommerce/src/app/components/product-details/product-details.component.html
+++ b/frontend-ecommerce/src/app/components/product-details/product-details.component.html
@@ -3,7 +3,9 @@
         <img src="{{ product.imageUrl }}" class="detail-img">
         <h3>{{ product.name }}</h3>
         <div class="price">{{ product.unitPrice | currency:'USD' }}</div>
-        <button (click)="addToCart()" class="btn btn-primary btn-small">Add to cart</button>
+        <button (click)="addToCart(
+
+        )" class="btn btn-primary btn-small">Add to cart</button>
         <hr>
         <h4>Description</h4>
         <p>{{ product.description}}</p>
