--- a/frontend-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/frontend-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -29,8 +29,25 @@
 
                             <td>
                                 <div class="items">
-                                    <label>Quantity:</label>{{ tempCartItem.quantity }}
+                                    <label>Quantity:</label>
+                                    <div class="row no-gutters">
+                                        <div (click)="incrementQuantity(tempCartItem)" class="col">
+                                            <button class="btn btn-primary btn-sm">
+                                                <i class="fa fa-plus"></i>
+                                            </button>
+                                        </div>
+                                        <div class="col ml-4 mr-2">
+                                            {{ tempCartItem.quantity }}
+                                        </div>
+                                        <div (click)="decrementQuantity(tempCartItem)" class="col">
+                                            <button class="btn btn-primary btn-sm">
+                                                <i class="fa fa-minus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
+                                <button (click)="remove(tempCartItem)" class="btn btn-primary btn-sm mt-2">Remove</button>
+                            \
                                 <p class="mt-2">Subtotal: {{ tempCartItem.quantity * tempCartItem.unitPrice | currency:
                                     "USD" }}</p>
                             </td>
@@ -40,7 +57,8 @@
                             <td colspan="2">
                             </td>
                             <td style="font-weight: bold">
-                                <p>Total Quanlity: {{ totalQuantity }}</p>
+                                
+                                <p>Total Quantity: {{ totalQuantity }}</p>
                                 <p>Shipping: FREE</p>
                                 <p>Total Price: {{ totalPrice | currency:"USD" }}</p>
 
