--- a/frontend-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/frontend-ecommerce/src/app/components/checkout/checkout.component.html
@@ -258,6 +258,14 @@
                 </div>
                 <!--End Credit Card-->
 
+                <!--Review Order-->
+                 <div class="form-area">
+                    <h3>Review Your Order</h3>
+                    <p>Total Quantity: {{ totalQuantity }}</p>
+                    <p>Shipping: FREE </p>
+                    <p>Total Price: {{ totalPrice | currency: "USD" }}</p>
+                 </div>   
+                <!--End Review Order-->
                 <div class="text-center">
                     <button type="submit" class="btn btn-info">Purchase</button>
                 </div>
