--- a/frontend-ecommerce/src/app/components/checkout/checkout.component.html
+++ b/frontend-ecommerce/src/app/components/checkout/checkout.component.html
@@ -13,6 +13,17 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="firstName" class="form-control">
+                                <div *ngIf="firstName?.invalid && (firstName?.dirty || firstName?.touched)"
+                                    class="alert alert-danger">
+                                    <div
+                                        *ngIf="firstName?.errors?.['required'] || firstName?.errors?.['notOnlyWhitespace']">
+                                        First Name is required.
+                                    </div>
+                                    <div *ngIf="firstName?.errors?.['minlength']">
+                                        First Name must be at least 2 characters long.
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -24,6 +35,17 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="lastName" class="form-control">
+
+                                <div *ngIf="lastName?.invalid && (lastName?.dirty || lastName?.touched)"
+                                    class="alert alert-danger">
+                                    <div
+                                        *ngIf="lastName?.errors?.['required'] || lastName?.errors?.['notOnlyWhitespace']">
+                                        Last Name is required.
+                                    </div>
+                                    <div *ngIf="lastName?.errors?.['minlength']">
+                                        Last Name must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -35,6 +57,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="email" class="form-control">
+                                <div *ngIf="email?.invalid && (email?.dirty || email?.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="email?.errors?.['required']">
+                                        Email is required.
+                                    </div>
+                                    <div *ngIf="email?.errors?.['pattern']">
+                                        Email must be valid email format
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -55,6 +86,14 @@
                                         {{ country.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="shippingAddressCountry?.invalid && (shippingAddressCountry?.dirty || shippingAddressCountry?.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="shippingAddressCountry?.errors?.['required']">
+                                        Country is required.
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -66,6 +105,16 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="street" class="form-control">
+                                <div *ngIf="shippingAddressStreet?.invalid && (shippingAddressStreet?.dirty || shippingAddressStreet?.touched)"
+                                    class="alert alert-danger">
+                                    <div
+                                        *ngIf="shippingAddressStreet?.errors?.['required'] || shippingAddressStreet?.errors?.['notOnlyWhitespace']">
+                                        Street is required.
+                                    </div>
+                                    <div *ngIf="shippingAddressStreet?.errors?.['minlength']">
+                                        Street must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -77,6 +126,17 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="city" class="form-control">
+
+                                <div *ngIf="shippingAddressCity?.invalid && (shippingAddressCity?.dirty || shippingAddressCity?.touched)"
+                                    class="alert alert-danger">
+                                    <div
+                                        *ngIf="shippingAddressCity?.errors?.['required'] || shippingAddressCity?.errors?.['notOnlyWhitespace']">
+                                        City is required.
+                                    </div>
+                                    <div *ngIf="shippingAddressCity?.errors?.['minlength']">
+                                        City must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -92,6 +152,14 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="shippingAddressState?.invalid && (shippingAddressState?.dirty || shippingAddressState?.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="shippingAddressState?.errors?.['required']">
+                                        State is required.
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -103,6 +171,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="zipCode" class="form-control">
+
+                                <div *ngIf="shippingAddressZipCode?.invalid && (shippingAddressZipCode?.dirty || shippingAddressZipCode?.touched)"
+                                    class="alert alert-danger">
+                                    <div
+                                        *ngIf="shippingAddressZipCode?.errors?.['required'] || shippingAddressZipCode?.errors?.['notOnlyWhitespace']">
+                                        Zip Code is required.
+                                    </div>
+                                    <div *ngIf="shippingAddressZipCode?.errors?.['minlength']">
+                                        Zip Code must be at least 2 characters long.
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -116,6 +196,7 @@
                         <span class="au-checkmark"></span>Billing Address is the same as Shipping Address
                     </label>
                 </div>
+                <!--End checkbox Shipping Address is the same as Billing Address-->
 
                 <!--Billing Address-->
                 <div formGroupName="billingAddress" class="form-area">
@@ -131,6 +212,13 @@
                                         {{ country.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="billingAddressCountry?.invalid && (billingAddressCountry?.dirty || billingAddressCountry?.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="billingAddressCountry?.errors?.['required']">
+                                        Country is required.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -142,6 +230,17 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="street" class="form-control">
+
+                                <div *ngIf="billingAddressStreet?.invalid && (billingAddressStreet?.dirty || billingAddressStreet?.touched)"
+                                    class="alert alert-danger">
+                                    <div
+                                        *ngIf="billingAddressStreet?.errors?.['required'] || billingAddressStreet?.errors?.['notOnlyWhitespace']">
+                                        Street is required.
+                                    </div>
+                                    <div *ngIf="billingAddressStreet?.errors?.['minlength']">
+                                        Street must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -153,6 +252,17 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="city" class="form-control">
+
+                                <div *ngIf="billingAddressCity?.invalid && (billingAddressCity?.dirty || billingAddressCity?.touched)"
+                                    class="alert alert-danger">
+                                    <div
+                                        *ngIf="billingAddressCity?.errors?.['required'] || billingAddressCity?.errors?.['notOnlyWhitespace']">
+                                        City is required.
+                                    </div>
+                                    <div *ngIf="billingAddressCity?.errors?.['minlength']">
+                                        City must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -168,6 +278,13 @@
                                         {{ state.name }}
                                     </option>
                                 </select>
+
+                                <div *ngIf="billingAddressState?.invalid && (billingAddressState?.dirty || billingAddressState?.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="billingAddressState?.errors?.['required']">
+                                        State is required.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -179,6 +296,17 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="zipCode" class="form-control">
+
+                                <div *ngIf="billingAddressZipCode?.invalid && (billingAddressZipCode?.dirty || billingAddressZipCode?.touched)"
+                                    class="alert alert-danger">
+                                    <div
+                                        *ngIf="billingAddressZipCode?.errors?.['required'] || billingAddressZipCode?.errors?.['notOnlyWhitespace']">
+                                        Zip Code is required.
+                                    </div>
+                                    <div *ngIf="billingAddressZipCode?.errors?.['minlength']">
+                                        Zip Code must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -197,8 +325,14 @@
                                 <select formControlName="cardType">
                                     <option>Visa</option>
                                     <option>Mastercard</option>
-
                                 </select>
+
+                                <div *ngIf="creditCardCardType?.invalid && (creditCardCardType?.dirty || creditCardCardType?.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="creditCardCardType?.errors?.['required']">
+                                        Card Type is required.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -210,6 +344,17 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="nameOnCard" class="form-control">
+
+                                <div *ngIf="creditCardNameOnCard?.invalid && (creditCardNameOnCard?.dirty || creditCardNameOnCard?.touched)"
+                                    class="alert alert-danger">
+                                    <div
+                                        *ngIf="creditCardNameOnCard?.errors?.['required'] || creditCardNameOnCard?.errors?.['notOnlyWhitespace']">
+                                        Name on Card is required.
+                                    </div>
+                                    <div *ngIf="creditCardNameOnCard?.errors?.['minlength']">
+                                        Name on Card must be at least 2 characters long.
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -221,9 +366,22 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="cardNumber" class="form-control">
+
+                                <div *ngIf="creditCardCardNumber?.invalid && (creditCardCardNumber?.dirty || creditCardCardNumber?.touched)"
+                                    class="alert alert-danger">
+                                    <div
+                                        *ngIf="creditCardCardNumber?.errors?.['required'] || creditCardCardNumber?.errors?.['notOnlyWhitespace']">
+                                        Card Number is required.
+                                    </div>
+                                    <div *ngIf="creditCardCardNumber?.errors?.['pattern']">
+                                        Card Number must be valid card number format
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
+
 
                     <div class="row">
                         <div class="col-md-2">
@@ -232,10 +390,23 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input type="text" formControlName="securityCode" class="form-control">
+
+
+                                <div *ngIf="creditCardSecurityCode?.invalid && (creditCardSecurityCode?.dirty || creditCardSecurityCode?.touched)"
+                                    class="alert alert-danger">
+
+                                    <div
+                                        *ngIf="creditCardSecurityCode?.errors?.['required'] || creditCardSecurityCode?.errors?.['notOnlyWhitespace']">
+                                        Security Code is required.
+                                    </div>
+                                    <div *ngIf="creditCardSecurityCode?.errors?.['pattern']">
+                                        Security Code must be valid security code format
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col-md-2">
                             <label>Expiration Month</label>
@@ -244,7 +415,6 @@
                             <div class="input-space">
                                 <select formControlName="expirationMonth">
                                     <option *ngFor="let month of creditCardMonths">{{ month }}</option>
-
                                 </select>
                             </div>
                         </div>
@@ -262,6 +432,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <!--End Credit Card-->
 
@@ -273,6 +444,7 @@
                     <p>Total Price: {{ totalPrice | currency: "USD" }}</p>
                 </div>
                 <!--End Review Order-->
+                
                 <div class="text-center">
                     <button type="submit" class="btn btn-info">Purchase</button>
                 </div>
