--- a/frontend-ecommerce/src/app/components/cart-details/cart-details.component.html
+++ b/frontend-ecommerce/src/app/components/cart-details/cart-details.component.html
@@ -46,8 +46,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button (click)="remove(tempCartItem)" class="btn btn-primary btn-sm mt-2">Remove</button>
-                            \
+                                <button (click)="remove(tempCartItem)"
+                                    class="btn btn-primary btn-sm mt-2">Remove</button>
+
                                 <p class="mt-2">Subtotal: {{ tempCartItem.quantity * tempCartItem.unitPrice | currency:
                                     "USD" }}</p>
                             </td>
@@ -57,7 +58,7 @@
                             <td colspan="2">
                             </td>
                             <td style="font-weight: bold">
-                                
+
                                 <p>Total Quantity: {{ totalQuantity }}</p>
                                 <p>Shipping: FREE</p>
                                 <p>Total Price: {{ totalPrice | currency:"USD" }}</p>
